--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,18 @@
-name: Create Glow for Facebook app
+name: Create Glow for Facebook app (LiveContainer fix)
 
 on:
   workflow_dispatch:
     inputs:
-
       ipa_url:
         description: "URL to the decrypted IPA file"
         default: ""
         required: true
         type: string
-
       display_name:
         description: "App Name (Optional)"
         default: "Facebook"
         required: true
         type: string
-
       bundle_id:
         description: "BundleID (Optional)"
         default: "com.facebook.Facebook"
@@ -28,7 +25,7 @@ concurrency:
 
 jobs:
   build:
-    name: 
+    name: Build Glow-FB IPA
     runs-on: macos-latest
     permissions:
       contents: write
@@ -48,22 +45,19 @@ jobs:
       - name: Download and validate IPA
         run: |
           wget "${{ inputs.ipa_url }}" --no-verbose -O ${{ github.workspace }}/facebook.ipa
-
           file_type=$(file --mime-type -b ${{ github.workspace }}/facebook.ipa)
-
           if [[ "$file_type" != "application/x-ios-app" && "$file_type" != "application/zip" ]]; then
             echo "::error::Validation failed: The downloaded file is not a valid IPA. Detected type: $file_type."
             exit 1
           fi
 
       - name: Install Dependencies
-        run: brew install make ldid
+        run: |
+          brew install make ldid
+          pipx install cycript
 
       - name: Set PATH environment variable
         run: echo "$(brew --prefix make)/libexec/gnubin" >> $GITHUB_PATH
-
-      - name: Install cyan
-        run: pipx install --force https://github.com/asdfzxcvbn/pyzule-rw/archive/main.zip
 
       - name: Download Glow for Facebook
         id: download_glow
@@ -71,30 +65,39 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           api_url="https://api.github.com/repos/dayanch96/Glow/releases/latest"
-
-          # Workaround
-          curl -s -H "Authorization: Bearer $GITHUB_TOKEN" "$api_url" > /dev/null
-
           response=$(curl -s -H "Authorization: Bearer $GITHUB_TOKEN" "$api_url")
           tag_name=$(echo "$response" | jq -r '.tag_name')
           deb_url=$(echo "$response" | jq -r '.assets[0].browser_download_url')
-
-          if [[ "$deb_url" == "null" || -z "$deb_url" ]]; then
+          
+          if [[ -z "$deb_url" || "$deb_url" == "null" ]]; then
             echo "::error::Failed to get tweak URL from Github API"
             exit 1
           fi
-
+          
           echo "GLOW_TAG=$tag_name" >> $GITHUB_ENV
-          echo "Downloading: $deb_url"
           wget "$deb_url" --no-verbose -O ${{ github.workspace }}/glow_fb.deb
 
-      - name: Inject tweaks into IPA
-        run: cyan -i facebook.ipa -o Glow_FB_${{ env.GLOW_TAG }}.ipa -uwef glow_fb.deb -n "${{ inputs.display_name }}" -b ${{ inputs.bundle_id }} -s
+      - name: Extract DEB and prepare tweak
+        run: |
+          mkdir -p glow_tweak
+          dpkg-deb -R glow_fb.deb glow_tweak
+          # Extraktáljuk a tényleges .dylib fájlt
+          find glow_tweak -name "*.dylib" -exec cp {} glow_tweak.dylib \;
+
+      - name: Inject tweak with proper settings
+        run: |
+          cyan -i facebook.ipa -o Glow_FB_${{ env.GLOW_TAG }}.ipa \
+          -t glow_tweak.dylib \
+          -n "${{ inputs.display_name }}" \
+          -b ${{ inputs.bundle_id }} \
+          --allow-universal \
+          --enable-jit \
+          -s
 
       - uses: softprops/action-gh-release@v2.0.1
         with:
           tag_name: glow-fb-${{ env.GLOW_TAG }}
-          name: Glow_FB ${{ env.GLOW_TAG }}
+          name: Glow_FB ${{ env.GLOW_TAG }} (LiveContainer fix)
           files: Glow_FB_${{ env.GLOW_TAG }}.ipa
           draft: true
 
